Fixed scrollbar on desktop modal images

--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,8 @@ a {
   margin: auto;
   display: block;
   width: 80%;
-  max-width: 700px;
+  max-width: 500px;
+  padding-top: 5%;
 }
 
 .caption {
